--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+}
+td {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+}
 span.green{
   line-height: 1.8;
   display: inline-block;
@@ -21,7 +29,7 @@ span.indicator-in-pits {
   line-height: 1.8;
   display: inline-block;
   padding: 0 4px;
-  background: orange;
+  background: #999;
   color: #fff;
 }
 span.finish-status-out {
@@ -35,6 +43,49 @@ span.finish-status-checkeredflag {
   	background-image: url("./img/CheckeredFlag.png");
 	background-size: 30px 30px;
 }
+.slowontrack{
+  line-height: 1.8;
+  display: inline-block;
+  padding: 0 4px;
+  background: yellow;
+  color: #000;
+
+}
 th {
 	align: center;
+}
+.sliteg{
+   color: green;
+   font-weight: bold;
+   vertical-align: middle;
+    line-height: 1.8;
+  display: inline-block;
+  padding: 0 4px;
+  background: green;
+border-radius: 10px;
+}
+
+.sliter{
+   font-size: 12px;
+   color: red;
+   font-weight: bold;
+   vertical-align: middle;
+  line-height: 1.8;
+  display: inline-block;
+  padding: 0 4px;
+  background: red;
+border-radius: 10px;
+
+}
+
+.slitey{
+   font-size: 12px;
+   color: #FFD700;
+   font-weight: bold;
+   vertical-align: middle;
+  line-height: 1.8;
+  display: inline-block;
+  padding: 0 4px;
+  background: yellow;
+border-radius: 10px;
 }
