--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ td {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
 }
+div.current{
+  font-size: 120%;
+}
+
 span.green{
   line-height: 1.8;
   display: inline-block;
@@ -55,37 +59,49 @@ th {
 	align: center;
 }
 .sliteg{
-   color: green;
+  font-size: 12px; 
+   color: white;
    font-weight: bold;
    vertical-align: middle;
-    line-height: 1.8;
+    line-height: 2.2;
   display: inline-block;
-  padding: 0 4px;
+  padding: 2px 6px;
   background: green;
-border-radius: 10px;
+border-radius: 14px;
+
 }
 
 .sliter{
    font-size: 12px;
-   color: red;
+   color: white;
    font-weight: bold;
    vertical-align: middle;
-  line-height: 1.8;
+  line-height: 2.2;
   display: inline-block;
-  padding: 0 4px;
+  padding: 2px 6px;
   background: red;
-border-radius: 10px;
+border-radius: 14px;
 
 }
-
-.slitey{
-   font-size: 12px;
-   color: #FFD700;
+.slitef{
+  font-size: 12px;
+   color: black;
    font-weight: bold;
    vertical-align: middle;
-  line-height: 1.8;
+  line-height: 2.2;
   display: inline-block;
-  padding: 0 4px;
+  padding: 2px 6px;
+        background-image: url("./img/CheckeredFlag.png");
+        background-size: 30px 30px;
+}
+.slitey{
+   font-size: 12px;
+   color: black;
+   font-weight: bold;
+   vertical-align: middle;
+  line-height: 2.2;
+  display: inline-block;
+  padding: 2px 6px;
   background: yellow;
-border-radius: 10px;
+border-radius: 14px;
 }
