--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,16 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
 }
+h1, h2, h3, h4, h5, h6 {
+    color: #000;
+    line-height: 1;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+#legend-wrap2 h2 {
+    border-bottom: 1px solid #333;
+}
 td {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
