--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,35 @@ body {
 h1, h2, h3, h4, h5, h6 {
     color: #000;
     line-height: 1;
-    font-size: 18px;
-    font-weight: 400;
+    font-size: 16px;
     text-transform: uppercase;
 }
-#legend-wrap2 h2 {
+h2 {
+    font-size: 16px;
+}
+h3 {
+    font-size: 14px;
+    text-transform: none;
+}
+#legend-wrap2 h1, #legend-wrap2 h2 {
     border-bottom: 1px solid #333;
 }
 td {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
 }
-div.current{
-  font-size: 120%;
+span.current{
+  line-height: 1.8;
+  display: inline-block;
+  padding: 0 4px;
+  background: #FFF;
+  border-style: solid;
+  border-width: 1px;
+  color: #333;
+  font-size: 130%;
+  border-radius: 6px;
+  text-transform: uppercase;
+  
 }
 
 span.green{
@@ -75,7 +91,7 @@ th {
    vertical-align: middle;
     line-height: 2.2;
   display: inline-block;
-  padding: 2px 6px;
+  padding: 2px 8px;
   background: green;
 border-radius: 14px;
 
@@ -88,7 +104,7 @@ border-radius: 14px;
    vertical-align: middle;
   line-height: 2.2;
   display: inline-block;
-  padding: 2px 6px;
+  padding: 2px 8px;
   background: red;
 border-radius: 14px;
 
@@ -100,7 +116,7 @@ border-radius: 14px;
    vertical-align: middle;
   line-height: 2.2;
   display: inline-block;
-  padding: 2px 6px;
+  padding: 2px 8px;
         background-image: url("./img/CheckeredFlag.png");
         background-size: 30px 30px;
 }
@@ -111,7 +127,7 @@ border-radius: 14px;
    vertical-align: middle;
   line-height: 2.2;
   display: inline-block;
-  padding: 2px 6px;
+  padding: 2px 8px;
   background: yellow;
 border-radius: 14px;
 }
